--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,60 @@
+:root {
+    --font-fam: Arial, Helvetica, sans-serif;
+}
+
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+div {
+    border: 1px solid black;
+}
+
+body {
+    font-family: var(--font-fam);
+}
+
+header {
+    padding: 0.5rem;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#toggle-temp {
+    min-width: 45px;
+}
+
+.current-weather {
+    /* height: 100%; */
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: stretch;
+}
+
+.current-details {
+    text-align: right;
+}
+
+.current-details * {
+    padding: 0.15rem;
+}
+
+.forecast-container {
+    display: flex;
+    justify-content: space-around;
 }
