--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,7 @@
 :root {
     --font-fam: Arial, Helvetica, sans-serif;
+    --bg-colour: rgba(90, 78, 255, 0.85);
+    --content-bg: rgba(90, 78, 255, 1);
 }
 
 * {
@@ -8,12 +10,10 @@
     padding: 0;
 }
 
-div {
-    border: 1px solid black;
-}
-
 body {
     font-family: var(--font-fam);
+    background: var(--bg-colour);
+    color: #fff;
 }
 
 header {
@@ -24,37 +24,81 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+}
 
+.main > * {
+    padding: 1rem 0;
+}
+
+.main-current-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: var(--content-bg);
+    margin: 0.5rem;
+    padding: 0.75rem;
+    border-radius: 0.5rem;
 }
 
 .options {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-#toggle-temp {
-    min-width: 45px;
+    
 }
 
 .current-weather {
-    /* height: 100%; */
-    display: flex;
-    flex-direction: column;
     text-align: center;
-    align-items: stretch;
+    font-size: 1.5rem;
 }
 
 .current-details {
-    text-align: right;
+    display: flex;
+    justify-content: space-evenly;
+    background: var(--content-bg);
+    padding: 0.75rem;
+    border-radius: 0.5rem;
 }
 
-.current-details * {
-    padding: 0.15rem;
+.weather-feels-like, .weather-time {
+    font-size: 1rem;
+}
+
+.current-details-header {
+    padding-right: 1rem;
+}
+
+.current-details-details {
+    text-align: right;
 }
 
 .forecast-container {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+}
+
+.forecast-card {
+    background: var(--content-bg);
+    margin: 0.25rem;
+    border-radius: 0.5rem;
+}
+
+.forecast-container > * {
+    padding: 1rem;
+}
+
+#location-name {
+
+}
+
+.weather-current-temp {
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: 2rem;
 }
