--- a/style/styles.css
+++ b/style/styles.css
@@ -52,6 +52,10 @@ header {
     font-size: 1.5rem;
 }
 
+.current-weather > * {
+    padding: 0.25rem;
+}
+
 .current-details {
     display: flex;
     justify-content: space-evenly;
@@ -77,7 +81,7 @@ header {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 100%;
+    padding-top: 0;
 }
 
 .forecast-card {
@@ -86,12 +90,12 @@ header {
     border-radius: 0.5rem;
 }
 
-.forecast-container > * {
-    padding: 1rem;
+.forecast-card p {
+    font-size: 0.9rem;
 }
 
-#location-name {
-
+.forecast-container > * {
+    padding: 1rem;
 }
 
 .weather-current-temp {
