--- a/style/styles.css
+++ b/style/styles.css
@@ -20,6 +20,11 @@ header {
     padding: 0.5rem;
 }
 
+.search-error {
+    text-align: center;
+    opacity: 0;
+}
+
 .main {
     display: flex;
     flex-direction: column;
@@ -36,15 +41,43 @@ header {
     justify-content: space-around;
     background: var(--content-bg);
     margin: 0.5rem;
-    padding: 0.75rem;
+    padding: 2.5rem;
     border-radius: 0.5rem;
 }
 
 .options {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    
+    align-items: center;   
+}
+
+.options form {
+    background: var(--content-bg);
+    padding: 0.25rem;
+    border-radius: 0.5rem;
+}
+
+#location-search {
+    background: var(--content-bg);
+    border: none;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+}
+
+#location-search:active, #location-search:focus {
+    border: none;
+    outline: none;
+}
+
+#search-button {
+    background: none;
+    border: none;
+}
+
+#search-icon {
+    width: 1.5rem;
+    color: #fff;
+    src: '../search.png';
 }
 
 .current-weather {
